# birdnet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST.in  Pipfile  README.md  pyproject.toml
example/: example.py  minimal_example.py  predict_example.py
src/birdnet/: __init__.py  analyze.py  analyzer.py  audio.py  audio_based_prediction.py  audio_based_prediction_mp.py  config.py  location_based_prediction.py  model.py  species.py  types.py  utils.py
src/birdnet/models/: __init__.py  model_base.py  model_v2m4.py  model_v2m4_base.py  model_v2m4_gpu.py  model_v2m4_protobuf.py  model_v2m4_raven_custom.py  model_v2m4_tflite.py  model_v2m4_tflite_custom.py  model_v2p4.py  v2_4.py
src/birdnet/models/v2m4/: __init__.py  model_v2m4_base.py  model_v2m4_protobuf.py  model_v2m4_raven_custom.py  model_v2m4_tflite.py  model_v2m4_tflite_custom.py
src/birdnet_tests/: analyzer_tests.py  conftest.py  helper.py  test_utils.py  utils_tests.py
src/birdnet_tests/models/: model_v2p4_tests.py  test_model_v2m4_base.py  test_model_v2p4.py  test_predict_species_at_location_and_time.py  test_predict_species_within_audio_file.py
src/birdnet_tests/models/m2v4/: test_predict_species_at_location_and_time.py  test_predict_species_within_audio_file.py
src/birdnet_tests/models/model_v2m4.py/: test_downloader.py  test_predict_species_at_location_and_time.py  test_predict_species_within_audio_file.py
src/birdnet_tests/models/model_v2m4_protobuf_py/: test_audio_model_v2m4_protobuf.py  test_downloader.py  test_meta_model_v2m4_protobuf.py  test_model_v2m4_tflite.py  test_predict_species_at_location_and_time.py  test_predict_species_at_location_and_time_cpu.py  test_predict_species_at_location_and_time_gpu.py  test_predict_species_within_audio_file.py  test_predict_species_within_audio_file_cpu.py  (+1 more)
src/birdnet_tests/test_files/: meta-model.protobuf-gpu.pkl  meta-model.tflite.pkl  soundscape.flac  soundscape.wav.protobuf-cpu.pkl  soundscape.wav.protobuf-gpu.pkl  soundscape.wav.tflite.pkl
src/birdnet_tests/utils.py/: test_download_file_tqdm.py
src/birdnet_tests/utils_py/: test_download_file_tqdm.py  test_get_chunks_with_overlap.py  test_iter_audio_in_chunks_with_overlap.py  test_iter_chunks_with_overlap.py  test_load_audio_file_in_parts.py  test_load_audio_in_chunks_with_overlap.py
(+45 files in other folders)
