[project]
name = "birdnet"
version = "0.1.6"
description = "A Python library for identifying bird species by their sounds."
readme = "README.md"
requires-python = ">=3.9, <3.12"
license = { text = "MIT" }
authors = [{ name = "Stefan Taubert", email = "pypi@stefantaubert.com" }]
maintainers = [{ name = "Stefan Taubert", email = "pypi@stefantaubert.com" }]
keywords = [
  "birds",
  "deep-learning",
  "birdsong",
  "acoustic-monitoring",
  "bioacoustics",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Operating System :: OS Independent",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "tensorflow==2.15.1",
  "resampy>=0.4.3, <1.0.0",
  "soundfile>=0.12.1, <1.0.0",
  "scipy>=1.9.3, <2.0.0",
  "ordered-set>=4.1.0, <5.0.0",
  "tqdm>=4.64.1, <5.0.0",
  "numpy>=1.23.5, <2.0.0",
]

[project.optional-dependencies]
and-cuda = ["tensorflow[and-cuda]==2.15.1"]

[project.urls]
Homepage = "https://github.com/birdnet-team/birdnet"
Issues = "https://github.com/birdnet-team/birdnet/issues"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
packages = ["birdnet"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["birdnet", "birdnet.*"]
exclude = ["birdnet_tests", "birdnet_tests.*"]
namespaces = true

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
testpaths = ["src/birdnet_tests"]

[tool.autopep8]
indent-size = 2
ignore = ["E121"]
max_line_length = 100

[tool.isort]
line_length = 100
indent = 2
known_first_party = ["birdnet"]
known_third_party = []

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39,310,311}
isolated_build = True

[testenv]
deps = 
  pytest>=4.16.0
commands = 
  pytest
"""

[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"
